# ATPLean

./: .gitignore  ATPLean.lean  CLAUDE.md  Preprocessing.lean  README.md  ffff.lean  lake-manifest.json  lakefile.toml  pyproject.toml  rrrr.lean
ATPLean/: Basic.lean
ATPLean/by_claude_code/: README.md  debug_tokenizer.py  definition_database.py  goal2vec_model.py  improved_evaluation.py  integrated_theorem_prover.py  lean_expression_parser.py  lean_expression_parser_interact.py  lean_problem_parser.py  lean_problem_reader.py  lean_problem_reader_interact.py  mathlib_rl_trainer.py  minif2f_processor.py  pyproject.toml  result.md  rl_agent.py  test_mathlib_extraction.py  train_mathlib_system.py
ATPLean/inhand/: lean_dojo_exer.py  lean_interact_exer.py  main.py
src/: Preprocessing.lean
src/ATPLean/: Basic.lean  parsing_methlib.lean
src/ATPLean/by_claude_code/: README_MATHLIB_TRAINING.md  TRAINING_SUMMARY.md  lean_problem_parser.py  main.py  mathlib_data_loader.py  mathlib_goal2vec_trainer.py  openrouter_api_client.py  reinforcement_learning_node.py  run_analogy_test.py  simple_goal2vec_training.py  test_lean_interact_integration.py  test_word2vec_analogy.py  train_goal2vec.py  train_rl_agent.py
src/ATPLean/by_claude_code/mathlib_trained_models/: mathlib_data_export.json
src/ATPLean/inhand/: lean_dojo_exer.py  parsing_practice.py  rl_node.py
src/Preprocessing/: Main.lean
