[project]
name = "external"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "gensim>=4.3.3",
  "lean-dojo>=4.20.0",
  "lean-interact>=0.8.0",
  "matplotlib>=3.10.5",
  "openai>=1.95.1",
  "scikit-learn>=1.7.1",
  "torch>=2.7.1",
  "transformers>=4.53.2",
]


[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
]
